# AED_proyecto_frontend

./: AED - HashTable.postman_collection.json  CMakeLists.txt  app.js  generate_dataset.cpp  index.html  linearhash.h  loadcsv.h  main.cpp  productos1000.csv  productos10000.csv  productos100000.csv  productos20000.csv  productos50000.csv  styles.css
PruebasAnteriores/: generate_dataset.cpp  loadcsv.h  productos1000.csv  productos10000.csv  productos100000.csv  productos20000.csv  productos50000.csv
